--- a/2025.html
+++ b/2025.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--declaration for HTML5, declaration represents the document type, and helps browsers to display web pages correctly-->
 <html> 
 <head>
-<title>SHOOTOUT 24</title> <!-- Comment Example -->
+<title>SHOOTOUT 24</title> <!--Shows in tab-->
 </head>
-<body>
-<h1>Header Example</h1>
-<p>Paragraph Example</p>
+<body> 
+<h1>Header Example</h1> <!--header example, h1 to h6-->
+<p>Paragraph Example</p> <!--paragraph example-->
+<a href="https://www.w3schools.com">This is a link</a>
 </body>
 </html>
