--- a/2025.html
+++ b/2025.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html> <!--declaration for HTML5, declaration represents the document type, and helps browsers to display web pages correctly-->
 <html> 
 <head>
-<title>SHOOTOUT 24</title> <!--Shows in tab-->
+<title>SHOOTOUT 25</title> <!--Shows in tab-->
 </head>
 <body> 
 <h1>Header Example</h1> <!--header example, h1 to h6-->
 <p>Paragraph Example</p> <!--paragraph example-->
-<a href="https://www.w3schools.com">This is a link</a>
+<p>Writing this paragraph to test a <br> break</p>
+<a href="https://www.w3schools.com">This is a link</a> <!--link example-->
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142"> <!--image source, alternative text-->
 </body>
 </html>
