--- a/2025.html
+++ b/2025.html
@@ -7,7 +7,9 @@
 <h1>Header Example</h1> <!--header example, h1 to h6-->
 <p>Paragraph Example</p> <!--paragraph example-->
 <p>Writing this paragraph to test a <br> break</p>
-<a href="https://www.w3schools.com">This is a link</a> <!--link example-->
+<a href="https://www.w3schools.com">Visit W3Schools</a> <!--link example, a is for attributes (properties) of the elements, specified in the start tag, ex. name="value"-->
+<a href="https://www.masl3.com/">MASL3 Website</a>
+<a href="https://www.m2soccer.com/">MASL2 Website</a>
 <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142"> <!--image source, alternative text-->
 </body>
 </html>
