--- a/2025.html
+++ b/2025.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html> <!--declaration for HTML5, declaration represents the document type, and helps browsers to display web pages correctly-->
 <html> 
 <head>
+<meta charset="utf-8"> <!--UTF-8 includes most characters from different languages, symbols, and emojis, ensuring that text displays correctly. UTF-8 is the most widely used encoding on the web, making it a best practice for compatibility.-->
 <title>SHOOTOUT 25</title> <!--Shows in tab-->
 </head>
 <body> 
 <h1>Header Example</h1> <!--header example, h1 to h6-->
 <p>Paragraph Example</p> <!--paragraph example-->
 <p>Writing this paragraph to test a <br> break</p>
-<a href="https://www.w3schools.com">Visit W3Schools</a> <!--link example, a is for attributes (properties) of the elements, specified in the start tag, ex. name="value"-->
+<a href="https://www.w3schools.com">Visit W3Schools</a> <!--a tag = hyperlink, link example, a is for attributes (properties) of the elements, specified in the start tag, ex. name="value"-->
 <br>
 <a href="https://www.masl3.com/">MASL3 Website</a>
 <br>
