--- a/2025.html
+++ b/2025.html
@@ -8,12 +8,15 @@
 <h1>Header Example</h1> <!--header example, h1 to h6-->
 <p>Paragraph Example</p> <!--paragraph example-->
 <p>Writing this paragraph to test a <br> break</p>
-<a href="https://www.w3schools.com">Visit W3Schools</a> <!--a tag = hyperlink, link example, a is for attributes (properties) of the elements, specified in the start tag, ex. name="value"-->
+<p style="color:blue;">This text is blue</p>
+<a href="https://www.w3schools.com">Visit W3Schools</a> <!--a tag = hyperlink, link example, attributes (properties) of the elements, specified in the start tag, ex. name="value"-->
 <br>
 <a href="https://www.masl3.com/">MASL3 Website</a>
 <br>
 <a href="https://www.m2soccer.com/">MASL2 Website</a>
 <br>
-<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142"> <!--image source, alternative text-->
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142"> <!--image source, alternative text if image cannot be displayed-->
 </body>
 </html>
+
+<!--W3 Attributes the lang attribute-->
